--- a/src/sass/gpthemes/_gpth-floating-btn.scss
+++ b/src/sass/gpthemes/_gpth-floating-btn.scss
@@ -16,10 +16,26 @@
 			--right: 0.95rem;
 		}
 
-		@include dev('sm') {
-			--right: 5%;
-			--floating-icon-size: 1.8rem;
+		/* On GPTs page floating is overlaping user image in sticky header so i need to move it down */
+		@include dev('md') {
+			// --top: calc(var(--h-header) + 2.8rem);
+			// --top: calc(var(--h-header) / 4);
+			// --top: calc(var(--floating-icon-size) / 2);
+			top: calc(var(--h-header) / 2);
+			translate: 0 -50%;
+			--floating-icon-size: 2.2rem;
+			// translate: 0 calc(var(--floating-icon-size) / 5);
+			// translate: 0 calc(var(--h-header) / 2);
+			// transform: translateY(var(--floating-icon-size) / 2);
+			--right: 4rem;
 		}
+
+		// @include dev('sm') {
+		// --right: 5%;
+		// transform: translateY(-50%);
+		// --floating-icon-size: 1.8rem;
+		// translate: 0 calc(var(--floating-icon-size) / 2);
+		// }
 
 		&-icon {
 			position: relative;
@@ -384,16 +400,16 @@ html.light {
 
 
 /* GPTs page */
-body:has(.h-full.overflow-y-auto .sticky img[alt='User']) {
+// body:has(.h-full.overflow-y-auto .sticky img[alt='User']) {
 
-	@include dev('md') {
-		// box-shadow: inset 0 0 0 10px red !important;
+// 	@include dev('md') {
+// 		// box-shadow: inset 0 0 0 10px red !important;
 
-		.gpth {
-			&__floating {
-				// --top: calc(var(--h-header) * 2);
-				--top: calc(var(--h-header)/4);
-			}
-		}
-	}
-}
+// 		.gpth {
+// 			&__floating {
+// 				// --top: calc(var(--h-header) * 2);
+// 				--top: calc(var(--h-header)/4);
+// 			}
+// 		}
+// 	}
+// }
